@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T00:33:36Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "timestamp" : "2022-05-31T00:39:31Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -2, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
