@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-30T16:10:41Z",
-  "count" : 4,
-  "count_minmax" : [ 4, 4 ],
-  "count_decinc" : [ -0, +4 ],
+  "timestamp" : "2022-05-31T00:39:31Z",
+  "count" : 15,
+  "count_minmax" : [ 4, 15 ],
+  "count_decinc" : [ -0, +15 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
