@@ -1,21 +1,14 @@
 {
-  "timestamp" : "2022-05-30T16:10:41Z",
-  "count_outdated" : 1529,
-  "uniques_outdated" : 82,
-  "count" : 1592,
+  "timestamp" : "2022-05-31T00:39:31Z",
+  "count_outdated" : 1534,
+  "uniques_outdated" : 83,
+  "count" : 1605,
   "uniques" : 92,
   "views" : [
     {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 3, 4 ],
+      "count": 2,
+      "count_minmax": [ 2, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -70,8 +63,8 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
+      "count": 15,
+      "count_minmax": [ 4, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
