@@ -1,15 +1,10 @@
 {
-  "count": 63,
+  "count": 71,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 4,
+      "count": 15,
       "uniques": 1
     }
   ]
